--- a/lekston_weronika.html
+++ b/lekston_weronika.html
@@ -141,7 +141,7 @@
         const btn = document.getElementById('btnSubmit');
         const loader = document.getElementById('loader');
         const msg = document.getElementById('message');
-        if (scriptURL.includes("https://script.google.com/macros/s/AKfycbx3U8N5CW4rUBoAZaG0U-mwrCbVEci0pee0m3-iNuFkV4Pivz8kZB2FqMsbybWctPRjLA/exec")) { alert("Błąd konfiguracji: Nie wprowadzono adresu URL skryptu Google."); return; }
+        if (scriptURL.includes("TUTAJ_WKLEJ")) { alert("Błąd konfiguracji: Nie wprowadzono adresu URL skryptu Google."); return; }
         btn.disabled = true; loader.style.display = 'block'; msg.style.display = 'none';
         fetch(scriptURL, { method: 'POST', body: new FormData(form)})
             .then(response => response.json())
