--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="menu-grid">
-        <a href="andrzejewski.mieczyslaw.html" class="tile">
+        <a href="andrzejewski_mieczyslaw.html" class="tile">
             <span>Andrzejewski Mieczysław</span>
         </a>
 
