--- a/blachno_dawid.html
+++ b/blachno_dawid.html
@@ -54,8 +54,7 @@
         <h1>Formularz Danych Klienta</h1>
         <h2>Proszę o dokładne uzupełnienie poniższych danych w celu przygotowania dokumentacji.</h2>
         <div class="advisor-info">
-            <span class="advisor-name">Twój opiekun: Dawid Błachno</span>
-            <span class="advisor-title">Doradca klienta biznesowego</span>
+            <span class="advisor-name">Twój broker: Dawid Błachno</span>
         </div>
     </header>
 
