--- a/dzidkowski_mateusz.html
+++ b/dzidkowski_mateusz.html
@@ -63,7 +63,7 @@
         <h2>Proszę o dokładne uzupełnienie poniższych danych w celu przygotowania dokumentacji.</h2>
         <div class="advisor-info">
             <span class="advisor-name">Twój opiekun: Mateusz Dzidkowski</span>
-            <span class="advisor-title">Właściciel</span>
+            <span class="advisor-title">Właściciel BAF</span>
         </div>
     </header>
 
