--- a/pakula_piotr.html
+++ b/pakula_piotr.html
@@ -209,9 +209,9 @@
         <div class="legal-note">Administratorem Twoich danych osobowych jest Biuro Analizy finansowej Mateusz Dzidkowski z siedzibą w Krakowie. Twoje dane wpisane w formularzu będą przetwarzane wyłącznie w celu przygotowania wniosku i procesowania (zgodnie z art. 6 ust. 1 lit. f RODO – prawnie uzasadniony interes administratora). Pełną informację o Twoich prawach (m.in. dostępu do danych, ich sprostowania czy usunięcia) znajdziesz w naszej <a href="https://biuroanalizyfinansowej.pl/polityka-prywatnosci/" target="_blank">Polityce Prywatności</a>.</div>
 
         <div class="company-stamp">
-            <div class="company-name">BIURO ANALIZY FINANSOWEJ MATEUSZ DZIDKOWSKI</div>
+            <div class="company-name">BIURO ANALIZY FINANSOWEJ WOJCIECH MŁYNARCZYK</div>
             <div>30-719 Kraków, ul. Gromadzka 103A lok. 2</div>
-            <div>NIP: 6612281631 &nbsp; REGON: 381984834</div>
+            <div>NIP: 6581986772 &nbsp; REGON: 369148596</div>
             <div class="company-website"><a href="https://biuroanalizyfinansowej.pl/" target="_blank">biuroanalizyfinansowej.pl</a></div>
         </div>
         <div class="footer-copy">Biuro Analizy Finansowej 2025 © Wszelkie prawa zastrzeżone.</div>
