--- a/lekston_weronika_zobowiazania.html
+++ b/lekston_weronika_zobowiazania.html
@@ -84,7 +84,7 @@
     </header>
 
     <form id="bafDebtForm">
-        <input type="hidden" id="scriptUrl" value="TUTAJ_WKLEJ_URL_SWOJEGO_SKRYPTU_GOOGLE">
+        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbzYHCGvMpTBGMSyLSYWfVpjuHwerklLOIg3DLUSH51HgnAqtO6EkPWDczCqNuZL0d1aEQ/exec">
         <input type="hidden" name="doradca" value="Weronika Lekston">
 
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
