--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
             <span>Lekston Weronika</span>
         </a>
 
+        <a href="lekston_weronika_zobowiazania.html" class="tile">
+            <span>Weronika Lekston zobowiązania klienta</span>
+        </a>
+
         <a href="nojek_wiktoria.html" class="tile">
             <span>Nojek Wiktoria</span>
         </a>
