--- a/lekston_weronika_zobowiazania.html
+++ b/lekston_weronika_zobowiazania.html
@@ -183,7 +183,7 @@
     </header>
 
     <form id="bafDebtForm">
-        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbycje0rhOBROp1hpN4aQ9vGGTzbG0JeIgTdYzWqqkHv4QRBEdgw9oUeegKZhatE-o-mIw/exec">
+        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbzraCkxMZfkSJzJINEdF2Cfk6rt0Gh4arjZhXn9JhJBB-mKvP-tsUHviYykxCuJkHC3Dw/exec">
         <input type="hidden" name="doradca" value="Weronika Lekston">
 
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
@@ -407,7 +407,7 @@
             const payload = {
                 doradca: formData.get('doradca'),
                 imie_nazwisko: formData.get('imie_nazwisko'),
-                uwagi: formData.get('uwagi'), // Teraz poprawnie pobiera uwagi z textarea
+                uwagi: formData.get('uwagi'),
                 alimenty: "" 
             };
 
