--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
 
         <a href="dzidkowski_mateusz.html" class="tile">
             <span>Dzidkowski Mateusz</span>
+         </a>    
+        
+        <a href="dzidkowski_mateusz_zobowiazania.html" class="tile">
+            <span>Dzidkowski Mateusz zobowiązania klienta</span>
         </a>
     </div>
 
