--- a/dzidkowski_mateusz.html
+++ b/dzidkowski_mateusz.html
@@ -91,7 +91,7 @@
         <div class="advisor-info">
             <a href="https://q-r.to/MateuszDzidkowskiBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
                 <span class="advisor-name">Twój opiekun: Mateusz Dzidkowski</span>
-                <span class="advisor-title">Właściciel</span>
+                <span class="advisor-title">Właściciel BAF</span>
             </a>
         </div>
     </header>
