--- a/mlynarczyk_wojciech.html
+++ b/mlynarczyk_wojciech.html
@@ -91,7 +91,7 @@
         <div class="advisor-info">
             <a href="https://q-r.to/WojciechMlynarczykBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
                 <span class="advisor-name">Twój opiekun: Wojciech Młynarczyk</span>
-                <span class="advisor-title">Właściciel</span>
+                <span class="advisor-title">Właściciel BAF</span>
             </a>
         </div>
     </header>
