--- a/blachno_dawid.html
+++ b/blachno_dawid.html
@@ -30,7 +30,6 @@
         input:focus, select:focus, textarea:focus { border-color: var(--accent-color); outline: none; box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.2); }
         textarea { resize: vertical; min-height: 100px; }
         .children-years-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 10px; margin-top: 10px; }
-        .child-year-input { padding: 8px !important; font-size: 0.9rem !important; }
         .radio-group { display: flex; gap: 20px; margin-bottom: 10px; flex-wrap: wrap; }
         .radio-option { display: flex; align-items: center; cursor: pointer; font-size: 0.9rem; }
         .radio-option input { width: auto; margin-right: 8px; }
@@ -86,22 +85,20 @@
     <a href="https://biuroanalizyfinansowej.pl/" target="_blank" class="logo-link" title="Przejdź na stronę główną">
         <img src="baf_logo.png" alt="Logo BAF" class="logo">
     </a>
-
     <header>
         <h1>Formularz Danych Klienta</h1>
         <h2>Proszę o dokładne uzupełnienie poniższych danych w celu przygotowania dokumentacji.</h2>
-        
         <div class="advisor-info">
             <a href="https://q-r.to/DawidBlachnoBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
-                <span class="advisor-name">TWÓJ BROKER: Dawid Błachno</span>
+                <span class="advisor-name">Twój opiekun: Dawid Błachno</span>
+                <span class="advisor-title">Twój Broker</span>
             </a>
         </div>
     </header>
-
     <form id="bafForm">
         <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbx3U8N5CW4rUBoAZaG0U-mwrCbVEci0pee0m3-iNuFkV4Pivz8kZB2FqMsbybWctPRjLA/exec">
         <input type="hidden" name="doradca" value="Dawid Błachno">
-
+        
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
             <label for="website_hp">Nie wypełniaj tego pola:</label>
             <input type="text" id="website_hp" name="website_hp" tabindex="-1" autocomplete="off">
