--- a/index.html
+++ b/index.html
@@ -123,23 +123,34 @@
         <a href="andrzejewski_mieczyslaw.html" class="tile">
             <span>Andrzejewski Mieczysław</span>
         </a>
+        <a href="andrzejewski_mieczyslaw_zobowiazania.html" class="tile">
+            <span>Andrzejewski Mieczysław zobowiązania klienta</span>
+        </a>
 
         <a href="blachno_dawid.html" class="tile">
             <span>Błachno Dawid</span>
+        </a>
+        <a href="blachno_dawid_zobowiazania.html" class="tile">
+            <span>Błachno Dawid zobowiązania klienta</span>
         </a>
 
         <a href="daniszewski_daniel.html" class="tile">
             <span>Daniszewski Daniel</span>
         </a>
+        <a href="daniszewski_daniel_zobowiazania.html" class="tile">
+            <span>Daniszewski Daniel zobowiązania klienta</span>
+        </a>
 
         <a href="karpala_joanna.html" class="tile">
             <span>Karpała Joanna</span>
+        </a>
+        <a href="karpala_joanna_zobowiazania.html" class="tile">
+            <span>Karpała Joanna zobowiązania klienta</span>
         </a>
 
         <a href="lekston_weronika.html" class="tile">
             <span>Lekston Weronika</span>
         </a>
-
         <a href="lekston_weronika_zobowiazania.html" class="tile">
             <span>Weronika Lekston zobowiązania klienta</span>
         </a>
@@ -147,23 +158,34 @@
         <a href="nojek_wiktoria.html" class="tile">
             <span>Nojek Wiktoria</span>
         </a>
+        <a href="nojek_wiktoria_zobowiazania.html" class="tile">
+            <span>Nojek Wiktoria zobowiązania klienta</span>
+        </a>
 
         <a href="pakula_piotr.html" class="tile">
             <span>Pakuła Piotr</span>
+        </a>
+        <a href="pakula_piotr_zobowiazania.html" class="tile">
+            <span>Pakuła Piotr zobowiązania klienta</span>
         </a>
 
         <a href="zieba_maja.html" class="tile">
             <span>Zięba Maja</span>
         </a>
+        <a href="zieba_maja_zobowiazania.html" class="tile">
+            <span>Zięba Maja zobowiązania klienta</span>
+        </a>
 
         <a href="mlynarczyk_wojciech.html" class="tile">
             <span>Młynarczyk Wojciech</span>
+        </a>
+        <a href="mlynarczyk_wojciech_zobowiazania.html" class="tile">
+            <span>Młynarczyk Wojciech zobowiązania klienta</span>
         </a>
 
         <a href="dzidkowski_mateusz.html" class="tile">
             <span>Dzidkowski Mateusz</span>
          </a>    
-        
         <a href="dzidkowski_mateusz_zobowiazania.html" class="tile">
             <span>Dzidkowski Mateusz zobowiązania klienta</span>
         </a>
