--- a/blachno_dawid.html
+++ b/blachno_dawid.html
@@ -90,8 +90,7 @@
         <h2>Proszę o dokładne uzupełnienie poniższych danych w celu przygotowania dokumentacji.</h2>
         <div class="advisor-info">
             <a href="https://q-r.to/DawidBlachnoBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
-                <span class="advisor-name">Twój opiekun: Dawid Błachno</span>
-                <span class="advisor-title">Twój Broker</span>
+                <span class="advisor-name">TWÓJ BROKER: Dawid Błachno</span>
             </a>
         </div>
     </header>
