--- a/blachno_dawid_zobowiazania.html
+++ b/blachno_dawid_zobowiazania.html
@@ -52,8 +52,7 @@
         
         <div class="advisor-info">
             <a href="https://q-r.to/DawidBlachnoBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
-                <span class="advisor-name">Twój opiekun: Dawid Błachno</span>
-                <span class="advisor-title">Twój Broker</span>
+                <span class="advisor-name">TWÓJ BROKER: Dawid Błachno</span>
             </a>
         </div>
     </header>
