--- a/andrzejewski_mieczyslaw.html
+++ b/andrzejewski_mieczyslaw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formularz Klienta BAF - Wiktoria Nojek</title>
+    <title>Formularz Klienta BAF - Mieczysław Andrzejewski</title>
     <link rel="icon" type="image/png" href="baf_logo_p.png">
     <style>
         :root { --primary-color: #1a365d; --accent-color: #2b6cb0; --bg-color: #f7fafc; --white: #ffffff; --text-color: #2d3748; --border-radius: 8px; }
@@ -89,15 +89,15 @@
         <h1>Formularz Danych Klienta</h1>
         <h2>Proszę o dokładne uzupełnienie poniższych danych w celu przygotowania dokumentacji.</h2>
         <div class="advisor-info">
-            <a href="https://q-r.to/WiktoraNojekBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
-                <span class="advisor-name">Twój opiekun: Wiktoria Nojek</span>
+            <a href="https://l.ead.me/MieczyslawAndrzejewskiBiuroBAF" target="_blank" class="advisor-link" title="Kliknij, aby zobaczyć wizytówkę">
+                <span class="advisor-name">Twój opiekun: Mieczysław Andrzejewski</span>
                 <span class="advisor-title">Doradca klienta biznesowego</span>
             </a>
         </div>
     </header>
     <form id="bafForm">
         <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbx3U8N5CW4rUBoAZaG0U-mwrCbVEci0pee0m3-iNuFkV4Pivz8kZB2FqMsbybWctPRjLA/exec">
-        <input type="hidden" name="doradca" value="Wiktoria Nojek">
+        <input type="hidden" name="doradca" value="Mieczysław Andrzejewski">
         
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
             <label for="website_hp">Nie wypełniaj tego pola:</label>
@@ -183,7 +183,7 @@
                         <input type="file" id="file_upload" multiple>
                         <ul id="fileList" class="file-list"></ul>
                         <div class="file-hint">Max 5MB na plik. Akceptujemy PDF, JPG, PNG, DOC.</div>
-                        <div class="email-hint">Jeśli chcesz wysłać więcej załączników proszę o wysłanie na mój adres mailowy: <strong>wiktoria.nojek@kancelaria-af.com</strong></div>
+                        <div class="email-hint">Jeśli chcesz wysłać więcej załączników proszę o wysłanie na mój adres mailowy: <strong>m.andrzejewski@kancelaria-af.com</strong></div>
                     </div>
                 </div>
 
