--- a/dzidkowski_mateusz.html
+++ b/dzidkowski_mateusz.html
@@ -105,7 +105,7 @@
         </div>
     </header>
     <form id="bafForm">
-        <input type="hidden" id="scriptUrl" value="TUTAJ_WKLEJ_SWOJ_NOWY_URL_SKRYPTU">
+        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbwWTU1YFf_uqqu3SyezCvtwd8njgLVYj3F4FoMXPlAFS9lGc6rwoEor3u5BEzxBU1EhAg/exec">
         <input type="hidden" name="doradca" value="Mateusz Dzidkowski">
         
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
