--- a/blachno_dawid.html
+++ b/blachno_dawid.html
@@ -103,7 +103,7 @@
         </div>
     </header>
     <form id="bafForm">
-        <input type="hidden" id="scriptUrl" value="TUTAJ_WKLEJ_SWOJ_NOWY_URL_SKRYPTU">
+        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbwteD9UWkvE8YgK45HJ-dKIGxMc6OFaqIGXn83tdGBHB_YVEDzBse3ng7YqwNoxGEMF/exec">
         <input type="hidden" name="doradca" value="Dawid Błachno">
         
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
