--- a/lekston_weronika.html
+++ b/lekston_weronika.html
@@ -104,7 +104,7 @@
         </div>
     </header>
     <form id="bafForm">
-        <input type="hidden" id="scriptUrl" value="​https://script.google.com/macros/s/AKfycbwteD9UWkvE8YgK45HJ-dKIGxMc6OFaqIGXn83tdGBHB_YVEDzBse3ng7YqwNoxGEMF/exec">
+        <input type="hidden" id="scriptUrl" value="https://script.google.com/macros/s/AKfycbwteD9UWkvE8YgK45HJ-dKIGxMc6OFaqIGXn83tdGBHB_YVEDzBse3ng7YqwNoxGEMF/exec">
         <input type="hidden" name="doradca" value="Weronika Lekston">
         
         <div style="opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1;">
